cmake_minimum_required(VERSION 3.10)
project(OpenUTAU-Plugin)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_subdirectory(DPF)
add_subdirectory(libs/tiny-process-library)
add_definitions(-DASIO_STANDALONE -D_WIN32_WINNT=0x0601)
include_directories(libs/asio/asio/include)
add_subdirectory(src)