package(
    default_visibility = ["//visibility:public"],
)

cc_library(
    name = "classic_args",
    srcs = ["classic_args.cpp"],
    hdrs = ["classic_args.h"],
    deps = [
        "//worldline:synth_request",
        "@absl//absl/strings",
    ],
)

cc_library(
    name = "frq",
    srcs = ["frq.cpp"],
    hdrs = ["frq.h"],
)

cc_library(
    name = "timing",
    srcs = ["timing.cpp"],
    hdrs = ["timing.h"],
    deps = [
        "//worldline:synth_request",
        "//worldline/model",
    ],
)

cc_test(
    name = "timing_test",
    srcs = ["timing_test.cpp"],
    deps = [
        ":timing",
        "//worldline:synth_request",
        "//worldline/model",
        "@gtest//:gtest_main",
    ],
)

cc_library(
    name = "resampler",
    srcs = ["resampler.cpp"],
    hdrs = ["resampler.h"],
    deps = [
        ":classic_args",
        ":timing",
        "//worldline:synth_request",
        "//worldline/common:vec_utils",
        "//worldline/model",
        "//worldline/model:effects",
        "@world//:audioio",
    ],
)
